# freedom

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: handoff.md
.claude/hooks/: format-on-edit.sh  session-start.sh  update-paperwork.sh
.claude/rules/: python-style.md  rust-style.md  testing.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  nightly.yml  pr-checklist.yml  release-please.yml
core/: Cargo.toml
core/src/: lib.rs
docs/adr/: 0001-template.md  README.md
docs/superpowers/specs/: 2026-04-23-dev-workflow-setup-design.md
src/freedom/: __init__.py
tests/fixtures/: README.md
tests/integration/: test_smoke.py
tests/metamorphic/: test_placeholder.py
tests/property/: test_placeholder.py
tests/reference/: test_placeholder.py
tests/unit/: test_placeholder.py
