[project]
name = "freedom"
version = "0.1.0"
description = "Forex strategy research, optimisation and deployment platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "mypy>=1.20.2",
  "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freedom"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "TID", "PL"]
ignore = ["PLR0913"]  # too-many-arguments — forex functions legitimately have many

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # magic-values allowed in tests

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --strict-config"
markers = [
  "integration: end-to-end pipeline tests",
  "slow: tests taking >1s",
]
